[package]
name = "condow_core"
version = "0.17.0"
authors = ["Christian Douven <chridou@users.noreply.github.com>"]
readme = "README.md"
license = "Apache-2.0/MIT"
description = "Framework for concurrent downloads"
documentation = "https://docs.rs/condow_core"
homepage = "https://github.com/chridou/condow"
repository = "https://github.com/chridou/condow"
keywords = [ "download", "network", "parallel", "files"]
edition = "2021"

[dependencies]
pin-project-lite = "0.2"
bytes = "1"
futures = "0.3"
tokio = { version = "1", features = ["rt", "macros", "time"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"

[dev-dependencies]
rand = "0.8.0"
tokio = { version = "1", features = ["rt-multi-thread"] }
tracing-subscriber = "0.3"
tracing-flame = "0.2.0"