[package]
name = "condow_fs"
version = "0.11.0"
authors = ["Christian Douven <chridou@users.noreply.github.com>"]
readme = "README.md"
license = "Apache-2.0/MIT"
description = "Concurrent downloads for local files"
documentation = "https://docs.rs/condow_rusoto"
homepage = "https://github.com/chridou/condow"
repository = "https://github.com/chridou/condow"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
condow_core = { version = "0.10", path = "../condow_core"}

futures = "0.3"
anyhow = "1.0"
tokio = { version = "1", features = ["fs", "io-util"] }
bytes = "1"

