[package]
name = "condow_rusoto"
version = "0.2.1"
authors = ["Christian Douven <chridou@users.noreply.github.com>"]
readme = "README.md"
license = "Apache-2.0/MIT"
description = "Concurrent downloads from AWS S3"
documentation = "https://docs.rs/condow_rusoto"
homepage = "https://github.com/chridou/condow"
repository = "https://github.com/chridou/condow"
keywords = [ "AWS", "S3", "download", "parallel", "rusoto"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
condow_core = { version = "0.1", path = "../condow_core"}

futures = "0.3"
anyhow = "1.0"
rusoto_core = { version = "0.47", default_features = false }
rusoto_s3 = { version = "0.47", default_features = false }

[features]
default = ["native-tls"]
rustls = ["rusoto_core/rustls", "rusoto_s3/rustls"]
native-tls = ["rusoto_core/native-tls", "rusoto_s3/native-tls"]

